--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "open-props": "^1.3.16",
     "rgb-hex": "^4.0.0",
     "solid-app-router": "^0.4.1",
-    "solid-js": "^1.4.2"
+    "solid-js": "^1.4.2",
+    "zod": "^3.17.3"
   },
   "lint-staged": {
     "*.{js,css,md,cjs,mjs,tsx,ts}": "prettier --write"
