--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "vitest": "^0.12.7"
   },
   "dependencies": {
+    "@motionone/solid": "^10.11.0",
     "axios": "^0.27.2",
     "goober": "^2.1.10",
     "lodash-es": "^4.17.21",
+    "motion": "^10.11.0",
     "open-props": "^1.3.16",
     "rgb-hex": "^4.0.0",
     "solid-app-router": "^0.4.1",
